--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </div>
 
 <h2>About Me</h2>
-<p>My name is <strong>Yuhan Ye</strong>. I am currently pursuing research in the field of <strong>Optimization Theory</strong> and its application to <strong>Machine Learning and Decision Making</strong>.</p>
+<p>My name is <strong>Yuhan Ye</strong>. With a deep passion for exploring mathematical structures and practical algorithms, I have a broad interest in Computational and Applied Mathematics. I am currently pursuing research in the field of <strong>Optimization Theory</strong> and its application to <strong>Machine Learning and Decision Making</strong>.</p>
 
 <h2>Publications</h2>
 <ul>
