--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <div class="blockcontent">
  <p>
   <a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=http%3A%2F%2Fwww.mit.edu%2F%7Eaorc&count_bg=%2379C83D&title_bg=%23555555&icon=academia.svg&icon_color=%2362F040&title=Push&edge_flat=false"/></a>
-  People have pushed 叶 (Ye). Join them now!</p>
+  People have pushed Ye. Join them now!</p>
 </p>
 </div>
 </div>
