--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </td>
 <td id="layout-content">
 <div id="toptitle">
-<h1>Welcome to My Homepage</h1>
+<h1>Yuhan Ye 叶宇涵</h1>
 </div>
 
 <h2>About Me</h2>
