--- a/index.html
+++ b/index.html
@@ -6,56 +6,78 @@
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css" />
 <title>Yuhan Ye 叶宇涵</title>
+
+<style>
+  /* 增加页面两边留白，让内容居中且不太宽 */
+  #layout-content {
+    max-width: 880px;       /* 最大宽度，你可以根据屏幕调 */
+    margin: 0 auto;         /* 居中 */
+    padding-left: 40px;     /* 左侧留白 */
+    padding-right: 40px;    /* 右侧留白 */
+  }
+</style>
+
 </head>
 <body>
 <script src="tracker.js"></script>
 
-<table summary="Table for page layout." id="tlayout">
-<tr valign="top">
-<td id="layout-menu">
-<div class="menu-category">Menu</div>
-<div class="menu-item"><a href="index.html" class="current">Home</a></div>
+<div id="layout-content">
+  <div id="toptitle">
+    <h1>Yuhan Ye 叶宇涵</h1>
+  </div>
+
+  <table class="imgtable" style="width:100%;">
+    <tr>
+      <td style="width: 400px;">
+        <img src="ME.jpg" alt="me" align="left" width="400" />
+      </td>
+<td align="left" style="vertical-align: top; padding-left: 20px;">
+  <h2>About Me</h2>
+   <br />
+  <p>
+    I am a final-year undergraduate student majoring in <strong>applied and computational mathematics</strong> at the School of Mathematical Sciences, Peking University.
+  </p>
+  <p>
+    I am an incoming PhD student at MIT <a href="https://ccse.mit.edu/">CCSE</a>, where I am fortunate to be supported by the CCSE College of Computing Graduate Fellowship.
+  </p>       
 </td>
-<td id="layout-content">
-<div id="toptitle">
-<h1>Welcome to My Homepage!</h1>
+
+    </tr>
+  </table>
+
+  <h2>Research</h2>
+  <p>
+          My research interests broadly cover <strong>optimization</strong>, <strong>theoretical computer science</strong>, and <strong>machine learning</strong>.
+        </p>
+        <p>
+          During my undergraduate studies, I was fortunate to learn from excellent mentors in various fields, including Professor <a href="https://sites.google.com/site/optyingcui/home?authuser=0">Ying Cui</a>, <a href="http://faculty.bicmr.pku.edu.cn/~wenzw/index.html">Zaiwen Wen</a>, and <a href="http://scholar.pku.edu.cn/ssh">Sihong Shao</a>, which helped me shape and clarify my research interests in computation theory.
+        </p>
+
+  <h2>Publications</h2>
+  <ul>
+    <li>
+      <div>
+        <p><strong>An Online Adaptive Sampling Algorithm for Stochastic Difference-of-convex Optimization with Time-varying Distributions</strong></p>
+        <p><em>Yuhan Ye, Ying Cui, Jingyi Wang</em></p>
+        <p>ICML 2025, <strong>spotlight poster</strong>. Temporarily available <a href="https://yeyuhanyyh.github.io/Online_Sampling_DC.pdf">here</a>.</p>
+      </div>
+    </li>
+  </ul>
+
+  <h2>Contact</h2>
+  <p>Feel free to reach out to me at:</p>
+  <ul>
+    <li>Email: <a href="mailto:yyh03@mit.edu">yyh03@mit.edu</a></li>
+    <li>Wechat: rtrt_rtrt</li>
+  </ul>
+
+
+  <h2>Miscellaneous</h2>
+  <p>
+  I like playing chess, while I am struggling to improve my ELO on <a href="https://chess.com">chess.com</a>. I also play other strategy games.
+  </p>
 </div>
 
-<h2>About Me</h2>
-<p>My name is <strong>Yuhan Ye</strong>. With a deep passion for exploring mathematical structures and practical algorithms, I have a broad interest in Computational and Applied Mathematics. I am currently pursuing research in the field of <strong>Optimization Theory</strong> and its application to <strong>Machine Learning and Decision Making</strong>.</p>
-
-<h2>Publications</h2>
-<ul>
-</ul>
-
-<h2>Contact</h2>
-<p>Feel free to reach out to me at:</p>
-<ul>
-  <li>Email: <a href="mailto:yyh830@stu.pku.edu.cn">yyh830@stu.pku.edu.cn</a></li>
-  <li>GitHub: <a href="https://github.com/yeyuhanyyh">https://github.com/yeyuhanyyh</a></li>
-</ul>
-
-</div>
-
-<div class="infoblock">
-<div class="blockcontent">
- <p>
-  <a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=http%3A%2F%2Fwww.mit.edu%2F%7Eaorc&count_bg=%2379C83D&title_bg=%23555555&icon=academia.svg&icon_color=%2362F040&title=Push&edge_flat=false"/></a>
-  People have pushed Ye. Join them now!</p>
-</p>
-</div>
-</div>
-
-<!-- <div class="block">
-  <button onclick="clickCounter()" type="button" class="button">Click me!</button>
-  <div onload="clickCounter()" id="result"></div>
-  <button id="reset" class="button">Reset</button>
-</div> -->
-
-
-</td>
-</tr>
-</table>
 <script src="tracker.js"></script>
 </body>
 </html>
