--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <li>
       <div>
         <p><strong>An Online Adaptive Sampling Algorithm for Stochastic Difference-of-convex Optimization with Time-varying Distributions</strong></p>
-        <p><em>Yuhan Ye, Ying Cui, Jingyi Wang</em></p>
+        <p><em><strong>Yuhan Ye</strong>, Ying Cui, Jingyi Wang</em></p>
         <p>ICML 2025, <strong>spotlight poster</strong>. Temporarily available <a href="https://yeyuhanyyh.github.io/Online_Sampling_DC.pdf">here</a>.</p>
       </div>
     </li>
