--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
     I am a final-year undergraduate student majoring in <strong>applied and computational mathematics</strong> at the School of Mathematical Sciences, Peking University.
   </p>
   <p>
-    I am an incoming PhD student at MIT <a href="https://ccse.mit.edu/">CCSE</a>, where I am fortunate to be supported by the CCSE College of Computing Graduate Fellowship.
-  </p>       
+    I am an incoming PhD student at MIT <a href="https://ccse.mit.edu/">CCSE</a>.  </p>       
 </td>
 
     </tr>
