--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
   <h2>Research</h2>
   <p>
-          My research interests broadly cover <strong>optimization</strong>, <strong>theoretical computer science</strong>, and <strong>machine learning</strong>.
+          My research interests broadly cover <strong>optimization</strong> and <strong>theory of computation</strong>.
         </p>
         <p>
           During my undergraduate studies, I was fortunate to learn from excellent mentors in various fields, including Professor <a href="https://sites.google.com/site/optyingcui/home?authuser=0">Ying Cui</a>, <a href="http://faculty.bicmr.pku.edu.cn/~wenzw/index.html">Zaiwen Wen</a>, and <a href="http://scholar.pku.edu.cn/ssh">Sihong Shao</a>, which helped me shape and clarify my research interests in computation theory.
