--- a/index.html
+++ b/index.html
@@ -73,8 +73,10 @@
 
   <h2>Miscellaneous</h2>
   <p>
-  I like playing chess, while I am struggling to improve my ELO on <a href="https://chess.com">chess.com</a>. I also play other strategy games.
+  I like playing chess, while I am struggling to improve my ELO on <a href="https://chess.com">chess.com</a>. I also play other strategy games. 
   </p>
+
+  <p>I've been listening to <a href="https://www.paulsimon.com" target="_blank">Paul Simon</a> a lot lately — for some reason.</p>
 </div>
 
 <script src="tracker.js"></script>
