--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           My research interests broadly cover <strong>optimization</strong> and <strong>theory of computation</strong>.
         </p>
         <p>
-          During my undergraduate studies, I was fortunate to learn from excellent mentors in various fields, including Professor <a href="https://sites.google.com/site/optyingcui/home?authuser=0">Ying Cui</a>, <a href="http://faculty.bicmr.pku.edu.cn/~wenzw/index.html">Zaiwen Wen</a>, and <a href="http://scholar.pku.edu.cn/ssh">Sihong Shao</a>, which helped me shape and clarify my research interests in computation theory.
+          During my undergraduate studies, I was fortunate to learn from excellent mentors in various fields, including Professor <a href="https://sites.google.com/site/optyingcui/home?authuser=0">Ying Cui</a>, <a href="http://faculty.bicmr.pku.edu.cn/~wenzw/index.html">Zaiwen Wen</a>, and <a href="http://scholar.pku.edu.cn/ssh">Sihong Shao</a>, who helped me shape and clarify my research interests in computation theory.
         </p>
 
   <h2>Publications</h2>
