--- a/index.html
+++ b/index.html
@@ -67,10 +67,13 @@ h1 {
     font-size: 21px;
   }
 
-  .imgtable img {
-    border: 2px solid #ccc;
-    box-shadow: 2px 2px 8px rgba(0,0,0,0.1);
-  }
+.imgtable img {
+  border: 6px solid rgba(123, 63, 29, 0.4); /* 透明度为 0.4 的棕色 */
+  border-radius: 8px;
+  box-shadow: 4px 4px 12px rgba(0, 0, 0, 0.2); /* 阴影也稍微淡一点 */
+  background: rgba(255, 245, 235, 0.3); /* 柔和背景衬托 */
+  transform: rotate(-1deg);
+}
 
   ul {
     padding-left: 20px;
