--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@ h1 {
     text-decoration: underline;
   }
 
+  strong {
+  color: #7b3f1d;
+  font-weight: bold;
+}
+
   p, li {
     font-size: 21px;
   }
@@ -102,7 +107,7 @@ h1 {
       </td>
       <td align="left" style="vertical-align: top; padding-left: 20px;">
         <h2>About Me</h2>       
-        <p>I am an incoming PhD student at MIT <a href="https://ccse.mit.edu/">CCSE</a>.</p>
+        <p>I am an incoming PhD student at the <a href="https://ccse.mit.edu/" target="_blank"><strong>MIT Center for Computational Science and Engineering (CCSE)</strong></a>.</p>
         <p>I received my B.S. degree from the School of Mathematical Sciences, Peking University in 2025, with a major in <strong>applied and computational mathematics</strong>.</p>
       </td>
     </tr>
