--- a/index.html
+++ b/index.html
@@ -142,5 +142,6 @@ h1 {
     &copy; 2025 Yuhan Ye. All rights reserved.
   </div>
 </div>
+<script async src="https://counter.dev/script.js" data-id="26-cc4ed3513157" data-utcoffset="8"></script>
 </body>
 </html>
