--- a/index.html
+++ b/index.html
@@ -142,6 +142,6 @@ h1 {
     &copy; 2025 Yuhan Ye. All rights reserved.
   </div>
 </div>
-<script async src="https://counter.dev/script.js" data-id="26-cc4ed3513157" data-utcoffset="8"></script>
+<script src="https://cdn.counter.dev/script.js" data-id="c0ec236a-81f6-4058-b026-cc4ed3513157" data-utcoffset="-7"></script>
 </body>
 </html>
