--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ h1 {
   border-bottom: 3px solid #7b3f1d;
   padding-bottom: 10px;
   margin-bottom: 30px;
+  transition: all 0.3s ease;
 }
 
   h2 {
@@ -135,8 +136,6 @@ h1 {
 
   <h2>Miscellaneous</h2>
   <p>I like playing chess, while I am struggling to improve my ELO on <a href="https://chess.com">chess.com</a>. I also play other strategy games.</p>
-
-  <p>I've been listening to <a href="https://www.paulsimon.com" target="_blank">Paul Simon</a> a lot lately — for some reason.</p>
 
   <div id="footer">
     &copy; 2025 Yuhan Ye. All rights reserved.
